update register with otp and confirm otp for customer